cross env, flags for prod and dev in pck.json

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "server side blog",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "deploy": "git push master",
     "logs:prod": "",
     "lint": "eslint .",
-    "test": "jest --verbose"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "John Kanti",
   "license": "MIT",
@@ -20,6 +20,7 @@
     "mongoose": "^6.8.3"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.32.0",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20"
