--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.32.0",
     "jest": "^29.3.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "testEnvironment": "node"
