--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "deploy": "git push master",
     "logs:prod": "",
     "lint": "eslint .",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit"
   },
   "author": "John Kanti",
   "license": "MIT",
